inicio mobil resp 1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
             </ul>
         </nav>
     </header>
+    <div class="mobil-init">
+        <img src="./images/ita nails logo insta.jpg" alt="">
+            
+    </div>
     <div class="container">
+        
         <div class="info">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, placeat odit, ipsa eaque blanditiis ea nesciunt officiis repellat esse consequuntur amet omnis laboriosam officia saepe, recusandae nulla. Ducimus, consequatur optio.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate neque quibusdam repudiandae eveniet commodi facilis. Fuga ullam distinctio possimus quis incidunt architecto fugit quo sit, similique atque, debitis quod odio.</p>
