--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Favicon here">
+    <link rel="stylesheet" href="index.css">
     <title>Ita Nails</title>
 </head>
 
@@ -15,19 +16,25 @@
         <h1 class="tittle">&ltIta Nails&gt
         </h1>
     </div>
-    <header class="head">
-        <nav class="navbar">
-            <div class="logoNav">
-                <h2 class="tittle">&ltIta Nails&gt
-                </h2>
-            </div>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#gallery">Galeria</a></li>
-                <li><a href="#contact">Contacto</a></li>
+    <header>
+        <nav>
+            <h2 class="logo tittle">&ltIta Nails&gt
+            </h2>
+
+            <ul class="enlaces-menu">
+                <li><a onclick="reset()" href="#inicio">Inicio</a></li>
+                <li><a onclick="reset()" href="#gallery">Galeria</a></li>
+                <li><a onclick="reset()" href="#contact">Contacto</a></li>
             </ul>
+
+            <button  class="ham" type="button">   
+                <span class="br-1"></span>
+                <span class="br-2"></span>
+                <span class="br-3"></span>
+            </button>                       
         </nav>
     </header>
+    
     <div class="mobil-init">
         <img src="./images/ita nails logo insta.jpg" alt="">
 
