--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Favicon here">
-    <link rel="stylesheet" href="index.css">
     <title>Ita Nails</title>
 </head>
 
@@ -34,6 +33,18 @@
             </button>                       
         </nav>
     </header>
+
+    <div class="modal-container">
+        <div class="modal modal-close">
+            <p class="close">X</p>
+            <img src="images/manicure.svg" alt="">
+           <div class="modal-textos">
+               <h2>&ltIta Nails&gt</h2>
+                <p> Promociones durante el mes de Mayo!!!</p>
+                <p>Consultanos</p>
+            </div>
+        </div>
+     </div>
     
     <div class="mobil-init">
         <img src="./images/ita nails logo insta.jpg" alt="">
