new card inicio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
      </div>
     
     <div class="mobil-init">
+        <div class="card flip-card-front">
         <img src="./images/ita nails logo insta.jpg" alt="">
+        <h2>Vedia</h2>
+        <p>Buenos Aires</p>
+    </div>
 
     </div>
     <div id="inicio" class="container">
