--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </h1>
     </div>
     <header>
-        <nav>
+        <nav id="navbar">
             <h2 class="logo tittle">&ltIta Nails&gt
             </h2>
 
@@ -26,11 +26,11 @@
                 <li><a onclick="reset()" href="#contact">Contacto</a></li>
             </ul>
 
-            <button  class="ham" type="button">   
+            <button class="ham" type="button">
                 <span class="br-1"></span>
                 <span class="br-2"></span>
                 <span class="br-3"></span>
-            </button>                       
+            </button>
         </nav>
     </header>
 
@@ -38,21 +38,22 @@
         <div class="modal modal-close">
             <p class="close">X</p>
             <img src="images/manicure.svg" alt="">
-           <div class="modal-textos">
-               <h2>&ltIta Nails&gt</h2>
+            <div class="modal-textos">
+                <h2>&ltIta Nails&gt</h2>
                 <p> Promociones durante el mes de Mayo!!!</p>
-                <p>Consultanos</p>
+                <p><b>Consultanos</b></p>
             </div>
         </div>
-     </div>
-    
-    <div class="mobil-init">
-        <div class="card flip-card-front">
-        <img src="./images/ita nails logo insta.jpg" alt="">
-        <h2>Vedia</h2>
-        <p>Buenos Aires</p>
     </div>
 
+    <div class="mobil-init">
+
+        <div class="card">
+            <img src="./images/ita nails logo insta.jpg" alt="">
+            <h2>Vedia</h2>
+            <p>Buenos Aires</p>
+        </div>
+    </div>
     </div>
     <div id="inicio" class="container">
 
@@ -74,9 +75,11 @@
         <img src="./images/Ph 1.jpg" alt="">
         <img src="./images/Ph 2.jpg" alt="">
         <img src="./images/Ph 3.jpg" alt="">
-        <img src="./images/Ph 4.jpg" alt="">
+        <img src="./images/Ph 2.jpg" alt="">
         <img src="./images/Ph 5.jpg" alt="">
         <img src="./images/Ph 3.jpg" alt="">
+        <img src="./images/Ph 2.jpg" alt="">
+        <img src="./images/Ph 1.jpg" alt="">
 
     </div>
 
@@ -101,8 +104,10 @@
 
 
     <footer class="foot">
-        <a href="https://www.instagram.com/ita.nails.2022/" target="_blank"><img src="./images/instagram-seeklogo.com.svg" alt=""></a>
-        <a href="https://wa.me/+5492364369315?text=Hola!!!" target="_blank"><img src="./images/What-icon.svg" alt=""></a>
+        <a href="https://www.instagram.com/ita.nails.2022/" target="_blank"><img
+                src="./images/instagram-seeklogo.com.svg" alt=""></a>
+        <a href="https://wa.me/+5492364369315?text=Hola!!!" target="_blank"><img src="./images/What-icon.svg"
+                alt=""></a>
 
     </footer>
 
